[package]
name = "hub20"
version = "1.0.0"
edition = "2021"
description = "Hub 2.0 Auto Booking - reserva na velocidade da API"

[dependencies]
ureq = { version = "2", features = ["json", "tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "now"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
dialoguer = "0.11"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
